--- a/AlbumCoverMatchGame.csproj
+++ b/AlbumCoverMatchGame.csproj
@@ -131,6 +131,8 @@
     </AppxManifest>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\correct.png" />
+    <Content Include="Assets\incorrect.png" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
     <Content Include="Assets\SplashScreen.scale-200.png" />
