--- a/AlbumCoverMatchGame.csproj
+++ b/AlbumCoverMatchGame.csproj
@@ -132,7 +132,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Assets\correct.png" />
+    <Content Include="Assets\correctGuess.wav" />
     <Content Include="Assets\incorrect.png" />
+    <Content Include="Assets\wrongGuess.wav" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
     <Content Include="Assets\SplashScreen.scale-200.png" />
